--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -16,6 +16,14 @@
     <h1>Hello world</h1>
     {% endif%}
 
+    <ul>
+        {% for product in products %}
+        <li>
+            {{ product.title }}
+        </li>
+        {% endfor %}
+    </ul>
+
 </body>
 
 </html>
